spectec/test/elab/neg/type-call-arg-arity-mismatch.spectec
;; Call a function with 1 value argument where it expects 2.

dec $f(nat, nat) : nat

dec $g : nat
def $g = $f(0)
